--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>random musings</title>
+    <title>Gordon Chi</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="anonymous quant musings">
@@ -16,13 +16,12 @@
     <div id='holder'>
         <div id='left'></div>
         <div id='middle'>
-            <h1><b>andrej oracle</b></h1>
+            <h1><b>gordon chi</b></h1>
             <p>i am pursuing a MS in CS and a BS in Math at Stanford, and a creative writer at heart. this blog will contain: 
             <ul>
                 <li> <a href="air.html">random ideas/research</a> in ai time series or otherwise</li>
                 <li><a href="writing_samples.html">writing samples</a> from my past, serious and non-serious</li>
                 <li><a href="personal_passions.html"> personal passions</a>, i.e. linguistics board/video games, sports predictions</li>
-                <li><a href="life.html"> life </a> blog </li>
             </ul>
           </p>
         </div>
