i added some changes

--- a/air.html
+++ b/air.html
@@ -5,7 +5,7 @@
     <title>ai/research musings</title>
 
     <meta charset="UTF-8">
-    <meta name="description" content="anonymous quant musings">
+    <meta name="description" content="interesting thoughts">
     <meta name="author" content="Anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
