--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Gordon Chi</title>
 
     <meta charset="UTF-8">
-    <meta name="description" content="anonymous quant musings">
+    <meta name="description" content="interesting thoughts">
     <meta name="author" content="Anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
@@ -15,15 +15,24 @@
 <body>
     <div id='holder'>
         <div id='left'></div>
-        <div id='middle'>
+        <div id='middle' style="width:50em;">
             <h1><b>gordon chi</b></h1>
-            <p>i am pursuing a MS in CS and a BS in Math at Stanford, and a creative writer at heart. this blog will contain: 
+            <p>i am pursuing a MS in CS and a BS in Math at Stanford, and a creative writer at heart. <br> <br>
+                i was most recently a trading intern at sig, a research lead for 'goldfinch' on the stanford alexa prize team, 
+                and a curis mentor at stanford. <br> <br>
+                
+                feel free to explore:
             <ul>
                 <li> <a href="air.html">random ideas/research</a> in ai time series or otherwise</li>
                 <li><a href="writing_samples.html">writing samples</a> from my past, serious and non-serious</li>
                 <li><a href="personal_passions.html"> personal passions</a>, i.e. linguistics board/video games, sports predictions</li>
             </ul>
           </p>
+          <p> try a few of my past projects, including:</p>
+          <ul>
+            <li> <a href="https://simplifai.netlify.app"> a virtual assistant for electronic health records</a></li>
+            <li> <a href="https://bit.ly/mathsprint"> a mental math practice site </a></li>
+        </ul>
         </div>
         <div id='right'> 
         <br>
