--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 feel free to explore:
             <ul>
-                <li> <a href="air.html">random ideas/research</a> in ai time series or otherwise</li>
+                <li> <a href="air.html">my research blog</a> containing my work at stanford and/or potential research ideas</li>
                 <li><a href="writing_samples.html">writing samples</a> from my past, serious and non-serious</li>
                 <li><a href="personal_passions.html"> personal passions</a>, i.e. linguistics board/video games, sports predictions</li>
             </ul>
