--- a/air.html
+++ b/air.html
@@ -23,10 +23,20 @@
                 i have previously interned in trading at a more discretionary firm, and that has led me to continue thinking about potential ideas in systematic approaches.
                 <br>
                 <br>
-                most of the below are not yet written out fully but will come soon! the stars denote how easy it is for a reader to understand without domain knowledge, with 1 being easiest and 5 being hardest. stay tuned :-)
+                most of the below are not yet written out fully but will come soon! the stars denote how easy it is for a reader to understand without domain knowledge, with 1 being easiest and 5 being hardest. stay tuned! 
+                <br>
+                <br>
+            
+                2023:
+                <ul>
+                <li> (<span id="one">***</span>) goldfinch: a unique approach to distilling models (coming soon)</li>
+                <li> (<span id="one">****</span>) a volatility framework for chess cheat detection (coming soon) </li>
+                <li> (<span id="one">****</span>) <a href="healthcarefinance.html">a crazy healthcare idea for finance</a></li>
+            </ul>
+            
+            2022:
             <ul>
                 <li> (<span id="one">*</span>) <a href="prompt_engineering.html">importance of prompt engineering for gpt-3 </a></li>
-                <li> (<span id="one">*****</span>) <a href="healthcarefinance.html">a crazy healthcare idea for finance</a></li>
                 <li> (<span id="one">***</span>) <a href="ehrxamine.html">a virtual assistant for clinical records</a></li>
                 <li> (<span id="one">****</span>) <a href="traffic.html">a novel way to predict car traffic</a> (and other time series problems) </a></li>
                 <!---
