--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id='right'> 
         <br>
-        <img src="andrej.png" width="80%"> </div>
+        <img src="images/andrej.png" width="80%"> </div>
 
     </div>
     
