--- a/ehrxamine.html
+++ b/ehrxamine.html
@@ -19,7 +19,7 @@
         <center><h1>EHR-Xamine</h1>
         <h3>A Virtual Assistant for Electronic Clinical Health Records</h3></center>
         <br>
-        <center> <img src="physician.png" width="60%"> </center>
+        <center> <img src="images/physician.png" width="60%"> </center>
         <br>
         <h1> Introduction </h1>
         <p>In the world of healthcare, physicians are required to work with rapidly growing amounts of medical data. The National Physician Poll by The Harris Poll in 2018 reports that 71% of physicians believe Electronic Health Records (EHR) greatly contribute to physician burnout, and 59% of physicians think EHRs need a complete overhaul. Indeed, in the current status quo, approximately 62% of time per patient is devoted to reviewing electronic health records (EHRs), with clinical data review being the most time-consuming portion of it all. Records are often filled with duplicated, outdated and even unrelated data, let alone ordered in a chronological or logical order given the concerns of a patient. Sifting through an unoptimized package is not only tedious on a physician’s standpoint, but also forces them to spend unneeded time that could otherwise be spent directly talking to and understanding a patient’s current condition.</p>
@@ -30,7 +30,7 @@
         <p>While this research paper has made a lot of progress in the world of healthcare, a virtual assistant can further reduce the time spent on reading electronic health record documents. For starters, the system developed by Chi et al. does not identify the cause of the patient visit, which is an important feature in determining which lab results and past patient visits to prioritize. Furthermore, most chatbots in the healthcare sphere prioritize customer-facing chatbots, i.e. Ni et al. (2017) [3] developed a chatbot, "Mandy", that assists health care staff by automating the patient intake process. EHR-Xamine tackles this shortcoming in the product space by being a virtual assistant that extracts important information within a health record based on physician commands. </p>
         <h2> PDF Conversion Pipeline </h2>
         <p>This project uses the PDF conversion pipeline from Chi et al. as an important first step of the project. This pipeline begins with an (1) optical character recognition algorithm that reads text in PDFs to extract dates, laboratory findings and all other information, before (2) running a rule-based keyword label classification algorithm to sort all pages by content category (referral, fax, insurance, progress note, procedure note, radiology report, laboratory values, operative report, or pathology report). This pipeline is topped off with a (3) date extraction algorithm that identifies the most relevant date on each page in the record, followed by (4) a lab extraction algorithm that organizes the most relevant CBC (complete blood count) and other test results into a relevant table. Finally, (5) a page-grouping algorithm utilizes a convolutional neural network and textual heuristics to partition the record into its constituent documents. A more diagram of this pipeline can be seen below.</p>
-        <center> <img src="oldpipeline.png" width="100%"> 
+        <center> <img src="images/oldpipeline.png" width="100%"> 
             <br>
         <small>Figure 1: A diagram of the pipeline proposed by Chi et al. that converts a raw PDF clinical health record into an organized packet.</small>
         </center>
@@ -41,7 +41,7 @@
         Generative Pre-trained Transformer 3 (GPT-3) is a large language model trained to predict a probabil- ity distribution over sequence of words. Alongside other similar projects released by OpenAI, i.e. ChatGPT, GPT-3 has attained state-of-the-art results across a multitude of NLP benchmarks and, in recent years, have been adapted to solve tasks in multiple different domains, from code completion and generation[5] to startups in the copywriting field [6]. Similar to its predecessor, GPT-3 utilizes a transformer-based architecture and is trained on roughly 500 billion tokens of textual data, with every 100 tokens representing roughly 75 words. On its publication date, GPT-3 was one of the largest language model ever released by parameter count: the first iteration of its largest model, <i> davinci </i>, contains over 175 billion parameters.
         <h1> Approach </h1>
         <p>In this research, we investigate the use of large language models, specifically GPT-3, alongside traditional rule-based heuristics for extracting relevant information from unstructured data in raw electronic health record PDFs. First, raw PDFs often contain unstructured data, for which rule-based methods or virtual assistant programming languages, i.e. ThingTalk [4] will be less suitable for. Printed formats for note, referrals, labs...etc are wildly different across different hospitals and even across different years and clinics. More importantly, we propose a novel usage of GPT-3 as a search-space pruner in this paper. Since the usefulness of a information retrieval chatbot is directly correlated to its latency, we utilize clever prompt engineering to prune off irrelevant pages alongside rule-based heuristics. The pipeline of our virtual assistant can be seen below.</p>
-        <center> <img src="newpipeline.png" width="100%"> 
+        <center> <img src="images/newpipeline.png" width="100%"> 
         <small>Figure 2: The entire procedure of the EHR-Xamine virtual assistant pipeline </small>
         </center>
         <h2> Step 0: Pre-Processing </h2>
@@ -88,7 +88,7 @@
         <p>Overall, this approach allows us to leverage the power of large language models, such as GPT-3, while still maintaining the control and precision of rule-based systems. By combining these two approaches, we are able to improve the accuracy and efficiency of our search algorithm. </p>
         <h3> Lab Retrieval </h3>
         <p>For all questions deemed a lab retrieval command by the search space pruner, we apply solely rule-based approaches to find the most relevant date and value. Since all lab values are aggregated on a table as part of the Chi et al. pipeline, it remains to search for the most relevant column. The most relevant column is determined by the smallest summation of the Levenshtein distance and the Jaro distance between the lab column and the query; the formula for Levenshtein can be seen in Figure 3 below. </p>
-        <center> <img src="lev.png" width="100%"> 
+        <center> <img src="images/lev.png" width="100%"> 
         <small>Figure 3: The equations for Levenshtein distance</small>
         </center>
         <h3> Date Retrieval </h3>
@@ -106,37 +106,37 @@
         <h2> User Interface </h2>
 
         <p> For EHR-Xamine to reach its fullest potential, we designed a user-friendly interface that would give physicians full control over their health record review, while ensuring that outputs by the virtual assistant are easily accessible and sanity checked, as seen in Figure 4. </p>
-        <center> <img src="interface.png" width="100%"> 
+        <center> <img src="images/interface.png" width="100%"> 
         <small>Figure 4: An image of the EHR-Xamine interface in action. Here, a page retrieval command is queried. Our virtual assistant highlights the relevant packet in the page of contents, redirects the physician to the relevant page and writes a summary of the fax.</small>
         </center>
         <p> A hyperlinked table of contents of the packet is featured on the left third of the interface. Clicking on any packet will directly bring you to the relevant packet, and double clicking a packet will remove all highlighting and prompt EHR-Xamine to provide a concise summary of the packet. Meanwhile, the middle third of the interface contains an iframe for the raw pdf electronic health record, and works like a normal pdf viewer. </p>
         <p> The right third of the interface allows us to read and write to the virtual assistant. If EHR-Xamine believes that the question has a searchable answer within the pdf, then the most relevant packets of information will be highlighted on the table of contents, as can be seen in Figure 4. Another example of this can be seen in Figure 5.</p>
-        <center> <img src="ultrasound.png" width="100%"> 
+        <center> <img src="images/ultrasound.png" width="100%"> 
         <small>Figure 5: Another image of the EHR-Xamine interface in action. Here, a command retrieval command is queried. Our virtual assistant highlights the relevant packet in the page of contents, and redirects the physician to the relevant page.</small>
         </center>
         <h1> Experiments </h1>
         <h2> Evaluation Metric </h2>
         <p> To evaluate the ability of EHR-Xamine to answer important healthcare questions across different domains, we ask our virtual assistant a total of 23 questions regarding a patient’s medical condition; we aim to compare the results from the baseline of the performance across twelve physicians with and without an AI assistant as reported by Chi et al [2]. The questions are as followed: </p>
-        <center> <img src="questions.png" width="100%">  </center>
+        <center> <img src="images/questions.png" width="100%">  </center>
         <h2> Data </h2>
         <p> As patient information is hard to request for for individual use, the EHR-Xamine system was developed as an add-on to the pipeline designed by Chi et. al and, thus, was developed using the same 45 patient referral records from the Division of Gastroenterology and Hepatology at Stanford University across a wide variety of gastroenterology clinicians. Across these patient referral records, four records are used for the evaluation of EHR-Xamine, for which ground truths of all above have been annotated for evaluation purposes. </p>
         <h2> Results </h2>
         <h3> Accuracy </h3>
         <p> EHR-Xamine responded to the above questions with an accuracy of 79.3% (73/92) (95% CI, 69.6 - 87.1%) across 92 responses from 4 packets, compared to 83.7% (95% CI, 79.3 - 88.2%) by physicians with AI-assisted packets. Due to the small sample size of four packets, our main conclusion that our virtual assistant can perform the same task with no significant decrease in accuracy. </p>
         <p> To further showcase the potential of EHR-Xamine in a clinical setting, we observe that our virtual assistant actually performs much better at retrieval questions (e.g. "Is there...?") compared to counting questions (e.g. "How many...?"), with an accuracy of 83.8% (67/80) (95% CI, 73.8 - 91.1%) for the former category but only 50.0% (6/12) (95% CI, 21.1 - 78.9%) for the latter. The former category is a lot more important for a physician, as it reduces the time taken to sift through a packet, while the latter requires a lot more inductive reasoning that a physician will have to do regardless of an assistant’s output. A deeper breakdown of this analysis across all packets can be seen in Table 1. </p>
-        <center> <img src="ehrx-table1.png" width="100%"> 
+        <center> <img src="images/ehrx-table1.png" width="100%"> 
         <small>Table 1: A breakdown of the accuracy of EHR-Xamine across different packet and question types. Here, we showcase that our virtual assistant is a lot more adept at answering retrieval based questions.</small>
         </center>
         <h3> Retrieval Speed </h3>
         <p> We believe that our model can impact the current healthcare system by saving many precious minutes in a physician’s EHR review of a patient. The time taken to answer all 23 questions per packet by EHR-Xamine was 1.8 minutes (95% CI: 1.5 - 2.1 minutes), with an average of 4.74 seconds per question. In comparison, physician review with AI-assisted packets took 10.5 minutes (95% CI, 8.5-12.6 minutes), while physician review without AI-assisted packets took 12.8 minutes (95% CI, 9.4-16.2 minutes), as seen in Figure 6. This represents an improvement of 83% time saved compared to AI-assisted packets, and 86% time saved compared to raw packets.</p>
         <p> That being said, as our virtual assistant is designed as a tool for physicians, these statistics should be considered mainly as a baseline for the potential of EHR-Xamine in clinical trials. It’s inevitable that physicians will spend more time reviewing a packet, and perhaps in this process catch errors in both retrieval-type and counting-type questions that our current software makes. Nevertheless, the magnitude of time saved by the virtual assistant presents a strong case that our work is an improvement over Chi et al.’s proposed user interface. </p>
-        <center> <img src="timesaved.png" width="100%"> 
+        <center> <img src="images/timesaved.png" width="100%"> 
         <small>Figure 6: Time saved (in minutes) by our EHR-Xamine virtual assistant in answering 23 relevant questions regarding a patient, compared to physicians using the AI-assisted software by Chi et al. [2] and physicians without any software.</small>
         </center>
         <h3> Question Analysis </h3>
         <p> Across all twenty-three questions, all questions were answered correctly at least once across the four packets, and a total of twelve questions were answered correctly across all four packets, as seen in Table 2. Taking a deeper dive into the questions, we observe that aside from lab-related commands and two questions regarding a physician visit date and a patient insurance provider, all other questions are of yes/no format, suggesting that GPT-3 and the packet retrieval technology does best for questions that require a direct answer, especially questions that do not require any checking for duplicate information. </p>
         <p> In comparison, only one question: <i> How many gastroenterologist/hepatology office visit notes are there in the chart? </i> was only answered correctly once across the four packets. Other poor-performing questions include Questions 1, 20 and 21 (<i>How many endoscopies has the patient received?, When was the last gastroenterologist / hepatology office visit </i>, and <i>How many MRI of the abdomen of the pelvis reports are present? </i>); these are three of five questions that were only answered correctly exactly twice across the four packets. These questions suggest that not only are counting questions more difficult for our model to parse, but that the presence of medical terminology in a question prompted into GPT-3 may yield undesired outcomes. </p>
-        <center> <img src="ehrx-table2.png" width="100%"> 
+        <center> <img src="images/ehrx-table2.png" width="100%"> 
         <small>Table 2: A list of all questions that EHR-Xamine answered correctly across all four times, across all four packets.</small>
         </center>
         <h1> Conclusion </h1>
