--- a/prompt_engineering.html
+++ b/prompt_engineering.html
@@ -18,7 +18,7 @@
         <div id='middle'>
         <center><h1>The Importance of Prompt Engineering</h1></center>
         <br>
-        <center> <img src="prompt.png" width="60%"> </center>
+        <center> <img src="images/prompt.png" width="60%"> </center>
         <br>
         <p>Don&rsquo;t tell anyone!</p>
         <p>I&rsquo;ll let you in on a secret: OpenAI&rsquo;s GPT-3 model has been powering a few of my own software-related projects. Though other companies, i.e. DeepMind, Baidu for Chinese have supposedly constructed similar models behind closed doors, GPT-3 is unique in that its API is accessible by the general public (programmers, researchers like us) and can be used to build commercial applications by any programmer in their bedroom. That being said, GPT-3 is not a magic wand: as we wait for other GPT-<i>n</i> iterations to be released to the general public, it&rsquo;s important to acknowledge the importance of <u>prompt engineering</u> in obtaining state-of-the-art results.</p>
@@ -38,9 +38,9 @@
         <p><u>Question:</u> My father has been beating me all the time. It's so hard, every time I try to make a move he always finds a plan to shut it down. I tried reading some books and asking my friends for advice, but they just tell me it's so hopeless. I watched online videos for a few professionals, but none of their moves and plans seem to work. Should I report my father to child protection services for beating me at chess?</p>
         <p>Here, GPT-3 responds with:</p>
         <p>"Child protection services is a great option when a child is in danger, but in this case we need to step away from the chessboard, so to speak. It's very easy to say that your father should be stopped, and that you should be protected from harm. This is a difficult situation, but it's one that you need to handle with a clear mind and a level head. Your father is your father, and he's not going to stop beating you no matter what. You're going to have to find a way to cope with the situation and find a way to put an end to the abuse. In order to do this, we need to understand why you are being abused. Are you an inconvenience to your father? Are you taking up too much of his time? Does he just have a short fuse? Think about these questions and find the root of the problem, and then you can start to create a plan to escape the abuse."&nbsp;</p>
-        <center> <img src="failed1.png" width="90%"> </center>
+        <center> <img src="images/failed1.png" width="90%"> </center>
         <br>
-        <center> <img src="failed2.png" width="90%"> </center>
+        <center> <img src="images/failed2.png" width="90%"> </center>
         <p>Above are some other runs of GPT-3 failing on this exact same prompt. This model doesn't pick up on the fact that the "beating" is winning at chess, and not a physical beating. Beyond that, though, it seems to do some victim blaming, essentially questioning if the child deserves to be beaten with questions like "Are you an inconvenience to your father", which is potentially highly problematic. Worst of all, a lot of this can be prevented by reordering the sentences in the prompt.</p>
         <p>Ultimately, GPT-3 has very exploitable weaknesses, and the only way we can provide &lsquo;domain knowledge&rsquo; and mitigate this issue is through clever prompting.</p>
         <h2>The Solution: Prompt Engineering</h2>
@@ -70,7 +70,7 @@
         </ol>
         <p>As one may realize, pipelines are important &ndash; and this discussion leads us quite nicely onto the question-answering healthcare project.</p>
         <br>
-        <center> <img src="read.png" width="60%"> </center>
+        <center> <img src="images/read.png" width="60%"> </center>
         <br>
         <h2>Case Study: A GPT-3 based Healthcare Assistant</h2>
         <p> In the fall, I designed a software named EHR-Xamine: a virtual assistant for electronic clinical health records. As a brief overview, physicians are required to work with rapidly growing amounts of medical data in the world of healthcare. The National Physician Poll by The Harris Poll in 2018 reports that 71% of physicians believe Electronic Health Records (EHR) greatly contribute to physician burnout, and 59% of physicians think EHRs need a complete overhaul. Indeed, in the current status quo, approximately 62% of time per patient is devoted to reviewing electronic health records (EHRs), with clinical data review being the most time-consuming portion of it all. Records are often filled with duplicated, outdated and even unrelated data, let alone ordered in a chronological or logical order given the concerns of a patient. Sifting through an unoptimized package is not only tedious on a physician’s standpoint, but also forces them to spend unneeded time that could otherwise be spent directly talking to and understanding a patient’s current condition.</p>
