--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id='middle' style="width:50em;">
             <h1><b>gordon chi</b></h1>
             <p>i am pursuing a MS in CS and a BS in Math at Stanford, and a creative writer at heart. <br> <br>
-                i was most recently a trading intern at sig, a research lead for 'goldfinch' on the stanford alexa prize team, 
+                i was most recently a trading intern at sig, a research lead for 'goldfinch' on the winning stanford alexa prize team, 
                 and a curis mentor at stanford. <br> <br>
                 
                 feel free to explore:
