--- a/air.html
+++ b/air.html
@@ -30,7 +30,7 @@
                 2023:
                 <ul>
                 <li> (<span id="one">***</span>) goldfinch: a unique approach to distilling models (coming soon)</li>
-                <li> (<span id="one">****</span>) a volatility framework for chess cheat detection (coming soon) </li>
+                <li> (<span id="one">****</span>) <a href="cheatdetection.html"> a volatility framework for chess cheat detection</a> </li>
                 <li> (<span id="one">****</span>) <a href="healthcarefinance.html">a crazy healthcare idea for finance</a></li>
             </ul>
             
