--- a/air.html
+++ b/air.html
@@ -29,7 +29,7 @@
             
                 2023:
                 <ul>
-                <li> (<span id="one">***</span>) goldfinch: a unique approach to distilling models (coming soon)</li>
+                <li> (<span id="one">***</span>) <a href="goldfinch.html"> goldfinch: a unique approach to distilling models </a> </li>
                 <li> (<span id="one">****</span>) <a href="cheatdetection.html"> a volatility framework for chess cheat detection</a> </li>
                 <li> (<span id="one">****</span>) <a href="healthcarefinance.html">a crazy healthcare idea for finance</a></li>
             </ul>
