added more links

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           <ul>
             <li> <a href="https://simplifai.netlify.app"> a virtual assistant for electronic health records</a></li>
             <li> <a href="https://bit.ly/mathsprint"> a mental math practice site </a></li>
+            <li> <a href="https://github.com/gsychi/DividendHFT-Environment"> a framework</a> for hft market impact simulations</li>
+            <li> <a href="https://lichess.org/@/SixtyFourEngine/"> a novel deep learning crazyhouse engine</a></li>
         </ul>
         </div>
         <div id='right'> 
