--- a/personal_passions.html
+++ b/personal_passions.html
@@ -17,7 +17,7 @@
         <div id='left'></div>
         <div id='middle'>
             <h1><b>personal passions</b></h1>
-            <p> outside of writing and research, i am particularly interested in chess variants (atomic specialist), building random programs, composing music, conlang/linguistics puzzles and watching basketball/football.
+            <p> outside of writing and research, i am particularly interested in chess, building random programs, composing music, conlang/linguistics puzzles and watching basketball/football.
                 <br><br>
                 i hope to add information regarding my predictions in this field or analysis on past games. in the meantime, try out:
             <ul>
